# gobley

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependency-image.Dockerfile  generate-yarn-locks.ps1  pr-build-test-docker.yml  pr-build-test-examples.ps1  pr-build-test-gradle-tests.ps1  pr-build-test-report-docker.yml  pr-build-test-report.yml  pr-build-test-uniffi-tests.ps1  pr-build-test.yml  publish-cargo-packages.ps1  publish.yml
.github/workflows/pr-build-test/: cargo-tests.ps1  copy-test-result.ps1  dependencies-zig.ps1  dependencies.ps1  environment.ps1  examples-app.ps1  examples-audio-cpp-app.ps1  examples-custom-types.ps1  examples-tokio-blake3-app.ps1  examples-tokio-boring-app.ps1  examples.ps1  gradle-plugin-tests.ps1  gradle-tests.ps1  uniffi-tests-gir-oc.ps1  uniffi-tests-gir.ps1  uniffi-tests-im.ps1  uniffi-tests-oc.ps1  uniffi-tests.ps1
bindgen/: Cargo.toml
bindgen/src/: lib.rs
bindgen/src/gen_kotlin_multiplatform/: enum_.rs  mod.rs
bindgen/src/templates/: macros.kt
bindgen/src/templates/android+jvm/: CallbackInterfaceImpl.kt  ExternalTypeTemplate.kt  Helpers.kt  NamespaceLibraryTemplate.kt  RustBufferTemplate.kt
bindgen/src/templates/common/: CallbackInterfaceTemplate.kt  EnumTemplate.kt  ExternalTypeTemplate.kt
bindgen/src/templates/ffi/: EnumTemplate.kt  ExternalTypeTemplate.kt  Helpers.kt  MapTemplate.kt  OptionalTemplate.kt  SequenceTemplate.kt
bindgen/src/templates/headers/: ExternalTypeTemplate.h  NamespaceLibraryTemplate.h
bindgen/src/templates/native/: CallbackInterfaceTemplate.kt  ExternalTypeTemplate.kt
bindgen/src/templates/stub/: Types.kt
build-logic/: build.gradle.kts
build-logic/gobley-gradle/: build.gradle.kts
build-logic/gobley-gradle-cargo/: build.gradle.kts
build-logic/gobley-gradle-cargo/api/: gobley-gradle-cargo.api
build-logic/gobley-gradle-rust/: build.gradle.kts
build-logic/gobley-gradle-rust/api/: gobley-gradle-rust.api
build-logic/gobley-gradle-uniffi/: build.gradle.kts
build-logic/gobley-gradle-uniffi/api/: gobley-gradle-uniffi.api
build-logic/gobley-gradle/api/: gobley-gradle.api
crates/gobley-uniffi-bindgen/: Cargo.toml
crates/gobley-uniffi-bindgen/src/: lib.rs  main.rs
crates/gobley-uniffi-bindgen/src/gen_kotlin_multiplatform/: compounds.rs  miscellany.rs  mod.rs  primitives.rs
crates/gobley-uniffi-bindgen/src/templates/: macros.kt
crates/gobley-wasm-transformer/: Cargo.toml  askama.toml
crates/gobley-wasm-transformer/src/: import.rs  lib.rs  main.rs  stack.rs  wasm_bindgen.rs
crates/gobley-wasm-transformer/src/templates/: js.kt
docs/: docusaurus.config.ts  package.json
docs/docs/: tutorial.md
docs/docs/docs/: 1-common-development-practices.md  3-bindgen.md  4-cross-compilation-tips.md
docs/docs/tutorial/: 0-tutorial.md  1-tutorial-android.md  2-tutorial-jvm.md  3-tutorial-native.md
docs/docs/tutorial-basics/: congratulations.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/versioned_docs/version-0.1.0/: tutorial.md
examples/Examples.xcworkspace/: contents.xcworkspacedata
examples/app/: build.gradle.kts
examples/app/swiftui/Config/: Config.xcconfig
examples/arithmetic-procmacro/: build.gradle.kts
examples/audio-cpp-app/: build.gradle.kts
examples/custom-types/: build.gradle.kts
examples/todolist/: build.gradle.kts
examples/tokio-blake3-app/: build.gradle.kts
examples/tokio-boring-app/: Cargo.toml  build.gradle.kts  uniffi.toml
examples/tokio-boring-app/ios/Config/: Config.xcconfig
examples/tokio-boring-app/ios/TokioBoringApp/: ContentView.swift  TokioBoringApp.swift
examples/tokio-boring-app/ios/TokioBoringApp.xcodeproj/: project.pbxproj
examples/tokio-boring-app/ios/TokioBoringApp.xcodeproj/xcshareddata/xcschemes/: TokioBoringApp.xcscheme
examples/tokio-boring-app/src/androidMain/: AndroidManifest.xml
examples/tokio-boring-app/src/androidMain/kotlin/: MainActivity.kt
examples/tokio-boring-app/src/commonMain/kotlin/: TokioBoringApp.kt
examples/tokio-boring-app/src/commonMain/rust/: lib.rs
examples/tokio-boring-app/src/iosMain/kotlin/: TokioBoringAppUIViewController.kt
gradle/: libs.versions.toml
tests/gradle/android-linking/: Cargo.toml  build.gradle.kts
tests/gradle/android-linking/src/main/rust/: lib.rs
tests/gradle/js-only/: Cargo.toml  build.gradle.kts  function-imports.txt
tests/gradle/jvm-only/: CMakeLists.txt  Cargo.toml  build.gradle.kts  build.rs
tests/gradle/jvm-only/src/main/cpp/: lib.cpp  lib2.cpp
tests/gradle/jvm-only/src/main/kotlin/: CppLibrary.kt  CppLibrary2.kt
tests/gradle/jvm-only/src/test/kotlin/: CppLibraryTest.kt  CppLibraryTest2.kt
tests/uniffi/coverall/: Cargo.toml  build.gradle.kts
tests/uniffi/coverall-android/: build.gradle.kts
tests/uniffi/coverall-jvm/: build.gradle.kts
tests/uniffi/coverall-pure-kotlin-dep/: build.gradle.kts
tests/uniffi/dynamic-library-dependencies/: Cargo.toml  build.gradle.kts  build.rs  gradle.properties  uniffi.toml
tests/uniffi/dynamic-library-dependencies/src/: dynamic-library-dependencies.udl
tests/uniffi/dynamic-library-dependencies/src/commonMain/rust/: lib.rs
tests/uniffi/dynamic-library-dependencies/src/commonTest/kotlin/: DynamicLibraryDependenciesTests.kt
tests/uniffi/dynamic-library-dependencies/the-dependency/: Cargo.toml  build.rs  lib.rs
tests/uniffi/futures/: build.gradle.kts
tests/uniffi/large-enum/: Cargo.toml  uniffi.toml
tests/uniffi/large-enum/src/commonMain/rust/: lib.rs
tests/uniffi/large-enum/src/commonTest/kotlin/: LargeEnumTest.kt
tests/uniffi/large-error/: Cargo.toml  uniffi.toml
tests/uniffi/large-error/src/commonMain/rust/: lib.rs
tests/uniffi/large-error/src/commonTest/kotlin/: LargeErrorTest.kt
(+198 files in other folders)
