[package]
name = "gobley-wasm-transformer"
version = "0.3.0"
edition = "2021"
authors = ["Gobley Contributors"]
description = "WebAssembly module transformation for Kotlin interoperability"
documentation = "https://github.com/gobley/gobley"
homepage = "https://github.com/gobley/gobley"
repository = "https://github.com/gobley/gobley"
license = "MPL-2.0"
keywords = ["wasm", "kotlin"]

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true, default-features = false, features = [
    "config",
    "derive",
    "alloc",
] }
base64 = "0.22"
camino = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "std"] }
walrus = "0.23"
