[package]
name = "gobley-fixture-gradle-android-linking"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gobley_fixture_gradle_android_linking"
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[dependencies]
jni = "0.21"
libc = "0.2"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_System_LibraryLoader"] }

[build-dependencies]
cbindgen = "0.26.0"
