[package]
name = "gobley-fixture-dynamic-library-dependencies"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gobley_fixture_dynamic_library_dependencies"
crate-type = ["staticlib", "cdylib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }

[build-dependencies]
gobley-fixture-build-common = { path = "../../build-common" }

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.build-dependencies]
tempdir = "0.3"

[features]
static = []
