[package]
name = "gobley-fixture-large-error"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gobley_fixture_large_error"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
thiserror = { workspace = true }
uniffi = { workspace = true }

[build-dependencies]
gobley-fixture-build-common = { path = "../../build-common" }
